# math_animations

./: .gitignore  Makefile  README.md  pyproject.toml
animations/: FluidViscosity.py  PoiseuillesLaw.py
presentations/: MagneticField.py
