[tool.poetry]
name = "math_animations"
version = "0.1.0"
description = "🧮 Animations for math based problems using 3b1b's manim animation"
authors = ["Matt Gleich <git@mattglei.ch>"]
license = "MPL 2.0"

[tool.poetry.dependencies]
python = "^3.7"
manim = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
